Run tempest on the undercloud node Make enabling NFS storage a property 'nfs_for_storage' Allow overriding of properties on command line without needing a section header (i.e. '-p ansible.debug=true' is now just '-p debug=true' and other minor cleanup

--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -9,10 +9,12 @@
     - osp-prep-for-overcloud
     - osp-overcloud
     - osp-test-data
-    - add-overcloud-host
+    - add-test-gateway-ip
+    - read-overcloudrc-props
+    - rh-tempest
 
-- hosts: overcloud_controller
-  remote_user: root
-  roles:
-  - add-test-gateway-ip
-  - rh-tempest
+#- hosts: overcloud_controller
+#  remote_user: root
+#  roles:
+#  - add-test-gateway-ip
+#  - rh-tempest
