--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -5,10 +5,13 @@
     - delete-overcloud
     - osp-overcloud
     - osp-test-data
-    - add-overcloud-host
+#    - add-overcloud-host
+    - read-overcloudrc-props
+    - add-test-gateway-ip
+    - rh-tempest
 
-- hosts: overcloud_controller
-  remote_user: root
-  roles:
-  - add-test-gateway-ip
-  - rh-tempest
+#- hosts: overcloud_controller
+#  remote_user: root
+#  roles:
+#  - add-test-gateway-ip
+#  - rh-tempest
