--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -92,6 +92,8 @@ controller_internal_nic = %(single_nic)s
 neutron_public_nic = %(single_nic)s
 hypervisor_neutron_public_nic = %(single_nic)s
 
+nfs_for_storage = True
+
 #example step, used for printing vars
 [example]
 
@@ -105,6 +107,8 @@ ignore_errors = true
 
 [redeploy]
 playbook = overcloud-redeploy.yml
+node_discovery = False
+deploy_undercloud = False
 
 [test_cloud]
 playbook = test-cloud.yml
