--- a/osp7_installer/ansible/roles/add-test-gateway-ip/tasks/main.yml
+++ b/osp7_installer/ansible/roles/add-test-gateway-ip/tasks/main.yml
@@ -2,4 +2,4 @@
 
 # TODO: not sure how this works out for multi-controller environments.
 - name: hack in ip for tests
-  shell: ip addr | grep -q {{ overcloud_bm_network_gateway }}/24 || ip a add {{ overcloud_bm_network_gateway }}/24 dev br-ex
+  shell: ip addr | grep -q {{ overcloud_bm_network_gateway }}/24 || ip a add {{ overcloud_bm_network_gateway }}/24 dev br-ctlplane
