--- a/osp7_installer/ansible/test-cloud.yml
+++ b/osp7_installer/ansible/test-cloud.yml
@@ -2,12 +2,15 @@
 - hosts: "{{ director_node_ssh_ip }}"
   connection: ssh
   roles:
-    - add-overcloud-host
+    - add-test-gateway-ip
+    - read-overcloudrc-props
+#    - add-overcloud-host
+    - rh-tempest
 
-- hosts: overcloud_controller
-  remote_user: root
-  roles:
-  - add-test-gateway-ip
-  - rh-tempest
+#- hosts: overcloud_controller
+#  remote_user: root
+#  roles:
+#  - add-test-gateway-ip
+#  - rh-tempest
 # Replace the above line with the below, to configure the certification to run.
 #  - rh-os-cert
