--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -8,21 +8,21 @@ testbed_vlan = 1
 
 yum_timeout = 120
 
-yum_repos = [{ 'name': 'osp7y1-director.repo', 'url': 'http://memory.cisco.com/osp7/rh-builds/y1-2015-10-01.1/y1-2015-10-01.1-RH7-RHOS-7.0-director.repo' },
-            { 'name': 'osp7y1.repo', 'url':  'http://memory.cisco.com/osp7/rh-builds/y1-2015-09-30.2/y1-2015-09-30.2-RH7-RHOS-7.0.repo' },
-            { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-rpms.repo' },
-            { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
-            { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
+yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-director-rpms.repo' },
+             { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms.repo' },
+             { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-rpms.repo' },
+             { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
+             { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
             ]
 
 cert_yum_repos = [{ 'name': 'rhel-7-server-cert-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-cert-rpms.repo' },
-                 { 'name': 'osp7y1.repo', 'url': 'http://memory.cisco.com/osp7/rh-builds/y1-2015-09-30.2/y1-2015-09-30.2-RH7-RHOS-7.0.repo' },
-                 { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-rpms.repo' },
-                 { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
-                 { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
+                  { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-openstack-7.0-rpms.repo' },
+                  { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-rpms.repo' },
+                  { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
+                  { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
                  ]
 
-image_base_url = http://memory.cisco.com/osp7/rh-builds/y1-2015-10-01.1/images/
+image_base_url = http://memory.cisco.com/osp7/rh-images/7.1-ga/
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
               { 'url': '%(image_base_url)s/overcloud-full.tar', 'name': 'overcloud-full.tar' }]
