--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -9,7 +9,8 @@ cobbler_username = cobbler
 cobbler_password = cobbler
 
 
-[ansible]
-proxy_env = { 'http_proxy':  "%(proxy)s",
-              'https_proxy': "%(proxy)s"}
+;[ansible]
+;proxy_env = { 'ftp_proxy':   "%(proxy)s",
+;	      'http_proxy':  "%(proxy)s",	
+;              'https_proxy': "%(proxy)s"}
 ;TODO: set no_proxy
