Work around neutron/tempest issue removing initial switch setup to support running tempest in a multi-controller environment (tempest runs on undercloud node)

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -94,6 +94,9 @@ hypervisor_neutron_public_nic = %(single_nic)s
 
 nfs_for_storage = True
 
+overcloud_vlan = 3998
+overcloud_vlan_tempest_hack = %(overcloud_vlan)s-3999
+
 #example step, used for printing vars
 [example]
 
