--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -93,9 +93,11 @@ neutron_public_nic = %(single_nic)s
 hypervisor_neutron_public_nic = %(single_nic)s
 
 nfs_for_storage = True
+deploy_with_flavors = False
+deploy_with_flavors_args = --control-flavor control --compute-flavor compute
+deploy_extra_args =
 
 overcloud_vlan = 3998
-overcloud_vlan_tempest_hack = %(overcloud_vlan)s-3999
 
 #example step, used for printing vars
 [example]
