Add patched RPM correct typo network_nexus_[p]rovider_vlan_auto_trunk

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -35,7 +35,7 @@ nfs_exports = [ "/export/cinder *(rw,sync,no_root_squash)", "/export/glance *(rw
 node_discovery = true
 deploy_overcloud = true
 deploy_undercloud = true
-override_qcow = false
+override_qcow = true
 
 osp_use_partner_repo = true
 
@@ -61,7 +61,7 @@ heat_templates_ref_1 = refs/changes/50/226550/2
 puppet_elements_ref = refs/changes/72/188772/1
 
 
-rpms_for_image = ""
+rpms_for_image = "http://memory.cisco.com/osp7/rpms/python-networking-cisco-2015.1.0-5.el7ost.noarch.rpm"
 
 
 # default heat config
@@ -78,7 +78,7 @@ network_nexus_persistent_switch_config = false
 network_nexus_switch_heartbeat_time = 0
 network_nexus_switch_replay_count = 3
 network_nexus_provider_vlan_auto_create = true
-network_nexus_rovider_vlan_auto_trunk = true
+network_nexus_provider_vlan_auto_trunk = true
 network_nexus_vxlan_global_config = true
 network_nexus_host_key_checks = false
 
