Add changes for multi-controller and misc cleanup
- Remove rh_tempest from redeploy role
- Modify redeploy role's ext net to be flat provider net (so openstack doesn't vlan tag ext net)
- test role: create test-net, test-router, etc under test-project
- add overcloudrc.test-project

--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -8,7 +8,7 @@
 #    - add-overcloud-host
     - read-overcloudrc-props
     - add-test-gateway-ip
-    - rh-tempest
+    #- rh-tempest
 
 #- hosts: overcloud_controller
 #  remote_user: root
