--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -3,6 +3,9 @@ proxy_host = proxy.esl.cisco.com
 proxy_port = 80
 proxy = http://%(proxy_host)s:%(proxy_port)s
 
+overcloud_vlan = 1202
+deploy_with_flavors=true
+
 [cobbler]
 cobbler_api_url = http://10.86.7.58/cobbler_api
 cobbler_username = cobbler
