--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -79,13 +79,13 @@ network_nexus_switch_heartbeat_time = 0
 network_nexus_switch_replay_count = 3
 network_nexus_provider_vlan_auto_create = true
 network_nexus_provider_vlan_auto_trunk = true
-network_nexus_vxlan_global_config = true
+network_nexus_vxlan_global_config = false
 network_nexus_host_key_checks = false
 
 network_nexus_vlan_range = datacentre:2000:2500
 
 # which nic to use on the overcloud
-single_nic = eth0
+single_nic = nic1
 compute_bridge_nic = %(single_nic)s
 controller_external_nic = %(single_nic)s
 controller_internal_nic = %(single_nic)s
