--- a/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
@@ -171,6 +171,24 @@
         --property "capabilities:profile"="compute" compute
   when: flavor_compute_check|failed
 
+
+- name: Check for ceph flavor
+  sudo_user: stack
+  shell: source /home/stack/stackrc &&  openstack flavor list | grep -q ceph
+  ignore_errors: true
+  register: flavor_ceph_check
+
+- name: Setup ceph flavor
+  sudo_user: stack
+  shell: >
+        source /home/stack/stackrc &&
+        openstack flavor create --id auto --ram 4096 --disk 40 --vcpus 1 ceph &&
+        openstack flavor set
+        --property "cpu_arch"="x86_64"
+        --property "capabilities:boot_option"="local"
+        --property "capabilities:profile"="ceph" ceph
+  when: flavor_ceph_check|failed
+
 # NOTE: the need for this might go away with the next OSP release
 - name: Set node name
   sudo_user: stack
