Manually merging b729782a4a267a6448a32225bd59df70754d4faa
This branch will be rebased before hitting master to clean up this history

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -112,7 +112,7 @@ undercloud_fake_gateway_interface = eth1
 
 nfs_for_storage = True
 deploy_with_flavors = True
-deploy_with_flavors_args = --control-flavor control --compute-flavor compute
+deploy_with_flavors_args = --control-flavor control --compute-flavor compute --ceph-storage-flavor ceph
 deploy_extra_args =
 
 
