Use per  flavour assignment by default  Add ceph flavour usage

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -93,8 +93,8 @@ neutron_public_nic = %(single_nic)s
 hypervisor_neutron_public_nic = %(single_nic)s
 
 nfs_for_storage = True
-deploy_with_flavors = False
-deploy_with_flavors_args = --control-flavor control --compute-flavor compute
+deploy_with_flavors = True
+deploy_with_flavors_args = --control-flavor control --compute-flavor compute --ceph-storage-flavor ceph
 deploy_extra_args =
 
 overcloud_vlan = 3998
