Add support for multi-nic vlan setup (2nd controller nic handles external connections) NOTE: this will be the default soon

--- a/bootstrap-example.conf
+++ b/bootstrap-example.conf
@@ -61,9 +61,14 @@ overcloud_floating_ip_start = 10.0.21.2
 overcloud_floating_ip_end = 10.0.21.254
 overcloud_bm_network_gateway = 10.0.21.1
 
+# assign specific flavors to roles
+deploy_with_flavors = true
+
 # ironic node config list
 overcloud_nodes = {"nodes":[
                   {
+                      "name": "control-a",
+                      "capabilities": "profile:control,boot_option:local",
                       "mac":[
                         "%(node_a_02_mac_vic1)s"
                       ],
@@ -77,6 +82,8 @@ overcloud_nodes = {"nodes":[
                       "pm_addr":"172.29.74.173"
                   }
                   ,{
+                      "name": "compute-a",
+                      "capabilities": "profile:control,boot_option:local",
                       "mac":[
                         "%(node_a_03_mac_vic1)s"
                       ],
@@ -90,6 +97,8 @@ overcloud_nodes = {"nodes":[
                       "pm_addr":"172.29.74.174"
                   }
                   ,{
+                      "name": "compute-b",
+                      "capabilities": "profile:control,boot_option:local",
                       "mac":[
                         "%(node_a_04_mac_vic1)s"
                       ],
