--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -4,7 +4,11 @@ ignore_errors = false
 
 proxy_env = {}
 
-testbed_vlan = 1
+testbed_vlan = 3000
+storage_vlan = 3001
+storage_mgmt_vlan = 3002
+tenant_network_vlan = 3003
+undercloud_vlan = 3009
 
 yum_timeout = 120
 
@@ -27,6 +31,10 @@ disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
               { 'url': '%(image_base_url)s/overcloud-full.tar', 'name': 'overcloud-full.tar' }]
 
+physical_ports = []
+physical_ports_external = []
+
+hack_in_undercloud_gateway_ip = true
 
 nfs_server_daemon = nfs-server
 
@@ -62,6 +70,13 @@ puppet_elements_ref = refs/changes/72/188772/1
 
 
 rpms_for_image = "http://memory.cisco.com/osp7/rpms/python-networking-cisco-2015.1.0-5.el7ost.noarch.rpm"
+patch_infos = [ {'name': 'networking-cisco',
+              'path': '/usr/lib/python2.7/site-packages/networking_cisco',
+              'ref': 'refs/changes/96/248996/1' },
+              {'name': 'neutron',
+               'path': '/usr/lib/python2.7/site-packages/neutron',
+               'ref': 'refs/changes/89/249389/1', }
+              ]
 
 
 # default heat config
@@ -82,7 +97,7 @@ network_nexus_provider_vlan_auto_trunk = true
 network_nexus_vxlan_global_config = false
 network_nexus_host_key_checks = false
 
-network_nexus_vlan_range = datacentre:2000:2500
+network_nexus_vlan_range = datacentre:3010:3250
 
 # which nic to use on the overcloud
 single_nic = nic1
@@ -98,6 +113,36 @@ deploy_with_flavors_args = --control-flavor control --compute-flavor compute
 deploy_extra_args =
 
 overcloud_vlan = 3998
+overcloud_external_vlan = %(overcloud_vlan)s
+
+# single NIC
+network_isolation = false
+neutron_flat_networks = datacentre
+neutron_bridge_mappings = datacentre:br-ex
+overcloud_external_net_bridge = br-ex
+hypervisor_neutron_physical_bridge = br-ex
+ext_net_network = datacentre
+
+# multi NIC:
+;neutron_flat_networks = datacentre,external
+;neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
+;overcloud_external_net_bridge = ''
+;hypervisor_neutron_physical_bridge = br-vlan
+;ext_net_network = external
+
+
+# You will need the following properties:
+
+# Example (use the same ip range for external IPs and floating):
+;overcloud_external_ip_cidr = 10.23.228.48/28
+;overcloud_external_ip_start = 10.23.228.52
+;overcloud_external_ip_end = 10.23.228.56
+;overcloud_external_gateway = 10.23.228.49
+;
+;overcloud_floating_ip_cidr = 10.23.228.48/28
+;overcloud_floating_ip_start = 10.23.228.58
+;overcloud_floating_ip_end = 10.23.228.62
+;overcloud_floating_ip_network_gateway = 10.23.228.49
 
 #example step, used for printing vars
 [example]
