Adding default options to base.conf

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -8,6 +8,7 @@ testbed_vlan = 3000
 storage_vlan = 3001
 storage_mgmt_vlan = 3002
 tenant_network_vlan = 3003
+overcloud_external_vlan = 3008
 undercloud_vlan = 3009
 
 yum_timeout = 120
@@ -99,36 +100,47 @@ network_nexus_host_key_checks = false
 
 network_nexus_vlan_range = datacentre:3010:3250
 
-# which nic to use on the overcloud
-single_nic = nic1
-compute_bridge_nic = %(single_nic)s
-controller_external_nic = %(single_nic)s
-controller_internal_nic = %(single_nic)s
-neutron_public_nic = %(single_nic)s
-hypervisor_neutron_public_nic = %(single_nic)s
+# which NICs to use on the overcloud
+neutron_private_nic = nic1
+neutron_public_nic = nic2
+hypervisor_neutron_public_nic = nic1
 
 nfs_for_storage = True
-deploy_with_flavors = False
+deploy_with_flavors = True
 deploy_with_flavors_args = --control-flavor control --compute-flavor compute
 deploy_extra_args =
 
-overcloud_vlan = 3998
-overcloud_external_vlan = %(overcloud_vlan)s
 
-# single NIC
-network_isolation = false
-neutron_flat_networks = datacentre
-neutron_bridge_mappings = datacentre:br-ex
-overcloud_external_net_bridge = br-ex
-hypervisor_neutron_physical_bridge = br-ex
-ext_net_network = datacentre
+# undercloud network
+undercloud_local_ip_simple = 192.0.2.1
+undercloud_local_ip = %(undercloud_local_ip_simple)s/24
+undercloud_masquerade_network = 192.0.2.0/24
+undercloud_dhcp_start = 192.0.2.4
+undercloud_dhcp_end = 192.0.2.99
+undercloud_network_cidr = 192.0.2.0/24
+undercloud_network_gateway = 192.0.2.1
+undercloud_discovery_iprange = 192.0.2.100,192.0.2.120
+undercloud_public_vip = 192.0.2.2
+undercloud_admin_vip = 192.0.2.3
+
+# TODO add doc describing the difference between single and multi nic
+
+;# single NIC
+;network_isolation = false
+;neutron_flat_networks = datacentre
+;neutron_bridge_mappings = datacentre:br-ex
+;overcloud_external_net_bridge = br-ex
+;hypervisor_neutron_physical_bridge = br-ex
+;ext_net_network = datacentre
+
+network_isolation = true
 
 # multi NIC:
-;neutron_flat_networks = datacentre,external
-;neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
-;overcloud_external_net_bridge = ''
-;hypervisor_neutron_physical_bridge = br-vlan
-;ext_net_network = external
+neutron_flat_networks = datacentre,external
+neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
+overcloud_external_net_bridge = ''
+hypervisor_neutron_physical_bridge = br-vlan
+ext_net_network = external
 
 
 # You will need the following properties:
@@ -139,10 +151,18 @@ ext_net_network = datacentre
 ;overcloud_external_ip_end = 10.23.228.56
 ;overcloud_external_gateway = 10.23.228.49
 ;
-;overcloud_floating_ip_cidr = 10.23.228.48/28
-;overcloud_floating_ip_start = 10.23.228.58
-;overcloud_floating_ip_end = 10.23.228.62
-;overcloud_floating_ip_network_gateway = 10.23.228.49
+# native vlan must be set
+overcloud_floating_ip_cidr = 10.0.21.0/24
+overcloud_floating_ip_start = 10.0.21.2
+overcloud_floating_ip_end = 10.0.21.254
+overcloud_floating_ip_network_gateway = 10.0.21.1
+
+
+# this props are not longer used?
+# TODO: remove them
+compute_bridge_nic = nic1
+controller_external_nic = nic1
+controller_internal_nic = nic1
 
 #example step, used for printing vars
 [example]
