Quick hack to add the correct NIC in the compute.yaml and controller.yaml
NOTE: this SHOULD be passed in from heat and NOT jinja, but this was a quick (and working) fix to a previously hard coded value

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/compute.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/compute.yaml
@@ -86,7 +86,8 @@ resources:
               members:
                 -
                   type: interface
-                  name: nic1
+                  # TODO: stop using jinja template here, pass in from heat
+                  name: {{ hypervisor_neutron_public_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
                 -
