--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -92,7 +92,8 @@ resources:
               members:
                 -
                   type: interface
-                  name: nic1
+                  # TODO: stop using jinja template here, pass in from heat
+                  name: {{ neutron_private_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
                 -
@@ -133,7 +134,8 @@ resources:
               members:
                 -
                   type: interface
-                  name: nic2
+                  # TODO: stop using jinja template here, pass in from heat
+                  name: {{ neutron_public_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
 
